--- a/app/globals.css
+++ b/app/globals.css
@@ -3,37 +3,54 @@
 @tailwind utilities;
 
 :root {
-	--foreground-rgb: 0, 0, 0;
-	--background-start-rgb: 200, 200, 220;
-	--background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 200, 200, 220;
+  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-	:root {
-		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
-	}
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
 }
 
 body {
-	color: rgb(var(--foreground-rgb));
-	background: conic-gradient(from 180deg at 50% 50%, #e66465, #9198e5);
-	/* background: linear-gradient(to bottom,
+  color: rgb(var(--foreground-rgb));
+  /* background: conic-gradient(from 180deg at 50% 50%, #e66465, #9198e5); */
+  background: linear-gradient(to bottom,
 	transparent,
-	rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb)); */
+	rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
-	/* .gradient-radial {
-		background-image: radial-gradient(var(--tw-gradient-stops));
-	}
+  .glass {
+    --b: 2px;
+    --r: 20px;
+    font-size: 25px;
+    border: none;
+    padding: 10px 20px;
+    position: relative;
+    background: linear-gradient(135deg, rgb(255 255 255/0%), rgb(255 255 255/20%));
+    border-radius: var(--r);
+  }
 
-	.gradient-conic {
-		background-image: conic-gradient(from 180deg at 50% 50%, #e66465, #9198e5);
-	} */
+  .glass::before {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    inset: calc(-1*var(--b));
+    padding: var(--b);
+    border-radius: calc(var(--b) + var(--r));
+    background: linear-gradient(135deg, rgba(255, 255, 255), rgb(255, 153, 0));
+    opacity: 0.5;
+    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+  }
 
-	.text-balance {
-		text-wrap: balance;
-	}
+  .text-balance {
+    text-wrap: balance;
+  }
 }
