--- a/app/globals.css
+++ b/app/globals.css
@@ -49,6 +49,7 @@ body {
     -webkit-mask-composite: xor;
     mask-composite: exclude;
   }
+  /* .card .overlay { overflow: hidden; } */
 
   .text-balance {
     text-wrap: balance;
