--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,14 @@
   }
 }
 
+
 body {
   color: rgb(var(--foreground-rgb));
   /* background: conic-gradient(from 180deg at 50% 50%, #e66465, #9198e5); */
   background: linear-gradient(to bottom,
 	transparent,
 	rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  overflow: hidden;
 }
 
 @layer utilities {
